--- a/content/404.html
+++ b/content/404.html
@@ -61,8 +61,7 @@
               <div class="bio mb-3">
                 Salve, mi chiamo Fabio sono un programmatore Java, ma amo molto
                 la programmazione funzionale scoperta inizialmente con Scala e
-                riscoperta ora con Clojure. Mi piacciono anche Kotlin, Python e
-                forse Rust.
+                riscoperta ora con Clojure. Mi piacciono anche Go e Python.
               </div>
               <!--//bio-->
 
