--- a/content/404.html
+++ b/content/404.html
@@ -59,9 +59,7 @@
               />
 
               <div class="bio mb-3">
-                Salve, mi chiamo Fabio sono un programmatore Java, ma amo molto
-                la programmazione funzionale scoperta inizialmente con Scala e
-                riscoperta ora con Clojure. Mi piacciono anche Go e Python.
+                Benvenuti sul sito web di Fabio Scotto di Santolo.
               </div>
               <!--//bio-->
 
